--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
                 <li class="nav-item ">
                     <a class="nav-link" href="/icoderbootstrap/index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="/icoderbootstrap/about.html">About</a>
                 </li>
                 <li class="nav-item dropdown">
